<?xml version="1.0" encoding="utf-8" ?>
<resources>

    <!--app name-->
    <string name="app_name">Material Wallpaper</string>

    <!--admob ads id-->
    <string name="admob_banner_id">ca-app-pub-5107556562590198/7524758862</string>
    <string name="admob_interstitial_id">ca-app-pub-5107556562590198/9001492069</string>

    <!--Set to @string/admob_off to disable admob and to admob_on enable admob-->
    <string name="admob_visibility">@string/admob_on</string>
    <string name="admob_on">0</string>
    <string name="admob_off">2</string>

    <!--your google play url-->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>

    <!-- Set to @string/drawer_info_on to enable info-->
    <!-- Set to @string/drawer_info_off to disable info-->
    <string name="drawer_visibility">@string/drawer_info_on</string>
    <!--Value Hide Info in Drawer Header-->
    <string name="drawer_info_on">0</string>
    <string name="drawer_info_off">2</string>

    <!--navigation drawer menu name-->
    <string name="drawer_recent">Recent Wallpaper</string>
    <string name="drawer_category">Category</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--network message-->
    <string name="network_error">No Internet Connection!!</string>
    <string name="network_first_load">First time loading from Internet!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="downloading">Downloading Image&#8230;</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <!--menu name-->
    <string name="menu_favorite">My Favorite</string>
    <string name="menu_about">About</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="menu_back">Previous Wallpaper</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="menu_save">Save</string>
    <string name="menu_zoom">Pinch Zoom</string>
    <string name="menu_fav">Favorite</string>
    <string name="menu_setaswallpaper">Set as Wallpaper</string>
    <string name="menu_next">Next Wallpaper</string>
    <string name="img_no">No Favorite Found</string>
    <string name="setaswallpaper">Set As Wallpaper</string>

    <!--app about information-->
    <string name="app_version">Version 2.1.2</string>
    <string name="app_copyright">Copyright &#169; 2015 Solodroid Developer \n All rights reserved</string>
    <string name="app_email">developer.solodroid@gmail.com</string>
    <string name="rate_summary">Give your rate and feedback</string>
    <string name="more_summary">More apps from developer</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_rate">Rate</string>
    <string name="title_app_more">More</string>

    <!--firebase analytics-->
    <string name="analytics_item_id_1">main_menu</string>
    <string name="analytics_item_id_2">wallpaper_menu</string>
    <string name="analytics_item_name_1">Main Menu</string>
    <string name="analytics_item_name_2">Wallpaper Menu</string>

    <!--others-->
    <string name="image_gallery">Gallery</string>
    <string name="image_zoom">Zoom</string>
    <string name="image_set_wallpaper">Set As Wallpaper</string>
    <string name="saved_folder_name">Material Wallpaper</string>
    <string name="saved_successfully">Image Saved Successfully</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="search_hint">Hint</string>
    <string name="search">Search</string>
    <string name="desc">desc</string>
    <string name="action_settings">Settings</string>

</resources>
