<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_recent"
            android:icon="@drawable/ic_drawer_recent"
            android:title="@string/drawer_recent" />

        <item
            android:id="@+id/drawer_category"
            android:icon="@drawable/ic_drawer_category"
            android:title="@string/drawer_category" />

        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_drawer_favorite"
            android:title="@string/drawer_favorite" />

        <item
            android:id="@+id/drawer_rate"
            android:icon="@drawable/ic_drawer_rate"
            android:title="@string/drawer_rate" />

        <item
            android:id="@+id/drawer_more"
            android:icon="@drawable/ic_drawer_more"
            android:title="@string/drawer_more" />

        <item
            android:id="@+id/drawer_setting"
            android:icon="@drawable/ic_drawer_about"
            android:title="@string/drawer_about" />
    </group>

</menu>